<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove agent</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>
    <string name="agent_details">Agent Details</string>
    <string name="name">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="user_id">User Id:</string>
    <string name="provider">Provider:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="submit_name">Submit Name</string>
    <string name="submit_email">Submit Email</string>
    <string name="submit_password">Submit Password</string>
    <string name="reset_email">Reset Email</string>
    <string name="password_error">Password error</string>
    <string name="remove_agent">Remove Agent</string>
    <string name="confirm_details">I confirm that the above details fetched during the pre investigation are evaluated to highest level of intelligence.</string>
</resources>
